[package]
name = "qmk_ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = "abort"
# lto = "yes" // https://github.com/rust-lang/rust/issues/96486
[profile.dev]
panic = "abort"